WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25596
Chromium build bustage caused by
r43317
(making RefCountedBase::m_refCount private)
https://bugs.webkit.org/show_bug.cgi?id=25596
Summary
Chromium build bustage caused by r43317 (making RefCountedBase::m_refCount pr...
Darin Fisher (:fishd, Google)
Reported
2009-05-06 14:00:09 PDT
Chromium build bustage caused by
r43317
(making RefCountedBase::m_refCount private) See
http://trac.webkit.org/changeset/43317
Our AccessibilityObjectWrapper still needs the old semantics of RefCounted (when it was zero initialized). We haven't fixed that yet because we are waiting to get our WebKit layer side into svn.webkit.org. That side uses COM style reference counting, which leads to needing the object to be initialized with a ref count of 0. This is all super annoyingly ugly, and I really want it to be fixed. But, I want the WebKit API to be upstreamed more than that, and so I am putting off this :-( Ugly workaround patch coming up...
Attachments
v1 patch
(1.15 KB, patch)
2009-05-06 14:04 PDT
,
Darin Fisher (:fishd, Google)
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2009-05-06 14:04:20 PDT
Created
attachment 30063
[details]
v1 patch
Dimitri Glazkov (Google)
Comment 2
2009-05-06 14:06:21 PDT
Comment on
attachment 30063
[details]
v1 patch Eek.
Darin Fisher (:fishd, Google)
Comment 3
2009-05-06 14:07:35 PDT
Landed as:
http://trac.webkit.org/changeset/43322
Darin Adler
Comment 4
2009-05-06 15:10:57 PDT
Another way to fix this would be to not use RefCounted until you can match its normal semantics. RefPtr works fine as long as there are ref and deref functions; they don't have to come from the RefCounted class template.
Darin Fisher (:fishd, Google)
Comment 5
2009-05-06 16:53:19 PDT
> Another way to fix this would be to not use RefCounted until you can match its > normal semantics. RefPtr works fine as long as there are ref and deref > functions; they don't have to come from the RefCounted class template.
That's a very good suggestion!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug