2009-05-06  Darin Fisher  <darin@chromium.org>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25596

        Fixes Chromium build bustage caused by r43317 (making
        RefCountedBase::m_refCount private)

        * page/chromium/AccessibilityObjectWrapper.h:
        (WebCore::AccessibilityObjectWrapper::AccessibilityObjectWrapper):



Canonical link: https://commits.webkit.org/35345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43322 268f45cc-cd09-0410-ab3c-d52691b4dbfc