WebCore/page/chromium/AccessibilityObjectWrapper.h
@@ -42,7 +42,7 @@ namespace WebCore {
             : m_object(obj)
         {
             // FIXME: Remove this once our immediate subclass no longer uses COM.
-            m_refCount = 0;
+            *addressOfCount() = 0;
         }
         AccessibilityObjectWrapper() : m_object(0) { }
 
